# xous-core

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .guix-channel  API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORMATTING.md  README-baochip.md  README-precursor.md  README.md  RELEASE-v0.8.md  RELEASE-v0.9.md  analyze-bloat.sh  baosign.ps1  buildpush.bat  buildpush.ps1  buildpush.sh  channels.scm  csr2bin.py  ct_eq.txt  debug-ditherpunk.txt  flake.nix  guix.scm  package-xous.sh  publish.py  rustfmt.toml  start-gdb.sh  wb-gdb.sh
.cargo/: config  (+1 more)
api/log-server/: Cargo.toml  README.md
api/log-server/src/: api.rs  lib.rs
api/ticktimer/: Cargo.toml
api/ticktimer/src/: api.rs
api/xous-api-log/: Cargo.toml
api/xous-api-log/src/: api.rs  cursor.rs  lib.rs
api/xous-api-names/: Cargo.toml
api/xous-api-names/src/: api.rs  lib.rs
api/xous-api-susres/: Cargo.toml
api/xous-api-susres/src/: api.rs  lib.rs
api/xous-api-ticktimer/: Cargo.toml  README.md
api/xous-api-ticktimer/src/: api.rs  lib.rs
apps-baosec/vault2/: Cargo.toml
apps-baosec/vault2/locales/: i18n.json
apps-baosec/vault2/src/: actions.rs  generator.rs  itemcache.rs  main.rs  storage.rs  submenu.rs  totp.rs  ux.rs  vault_api.rs  vendor_commands.rs
apps-dabao/dabao-console/: Cargo.toml
apps-dabao/dabao-console/src/: cmds.rs  ctap.rs  main.rs  repl.rs  shell.rs
apps-dabao/helloworld/: Cargo.toml
apps-dabao/helloworld/src/: main.rs
apps/app-loader/: Cargo.toml  README.md
apps/app-loader/locales/: i18n.json
apps/app-loader/spawn/: Cargo.toml  README.md  build.rs
apps/app-loader/src/: api.rs  main.rs
apps/ball/: Cargo.toml  README.md
apps/ball/locales/: i18n.json
apps/ball/src/: ball.rs  main.rs
apps/chat-test/: Cargo.toml  README.md
apps/chat-test/src/: api.rs  main.rs  tests.rs
apps/hello/: Cargo.toml
apps/hello/src/: main.rs
apps/hidv2/: Cargo.toml
apps/hidv2/locales/: i18n.json
apps/hidv2/src/: main.rs
apps/mtxchat/: Cargo.toml  README.md
apps/mtxchat/locales/: i18n.json
apps/mtxchat/src/: api.rs  lib.rs  listen.rs  main.rs  tests.rs  web.rs
apps/mtxcli/: Cargo.toml  README.md
apps/mtxcli/locales/: i18n.json
apps/mtxcli/src/: cmds.rs  main.rs  mtxcli.rs
baremetal/: Cargo.toml  build.rs
baremetal/src/: arty_rgb.rs  asm.rs  main.rs  platform.rs  repl.rs
baremetal/src/platform/: artybio.rs  artyvexii.rs  bao1x.rs  cramium.rs
kernel/: Cargo.toml  README.md  assemble.ps1  assemble.sh  build.rs  link.x
kernel/.cargo/: config
kernel/src/: args.rs  asm.S  debug.rs  io.rs  irq.rs  macros.rs  main.rs  mem.rs  processtable.rs  server-split-queues.rs  server.rs  services.rs  swap.rs  syscall.rs  test.rs  utils.rs
kernel/src/arch/: hosted.rs  mod.rs  riscv.rs  x86_64.rs
kernel/src/debug/: gdb.rs  gdb_server.rs  macros.rs  mod.rs  shell.rs
kernel/src/platform/: mod.rs  rand.rs
kernel/src/test/: mod.rs
kernel/utralib/src/: lib.rs
loader/: Cargo.toml  README.md  assemble.ps1  build.rs  link.x
loader/.cargo/: config
loader/curve25519-dalek-loader/: Cargo.toml
loader/curve25519-dalek-loader/src/: field.rs  lib.rs  traits.rs
loader/ed25519-dalek-loader/: Cargo.toml
loader/ed25519-dalek-loader/benches/: ed25519_benchmarks.rs
loader/ed25519-dalek-loader/src/: batch.rs  errors.rs  keypair.rs  lib.rs  public.rs  secret.rs  signature.rs
loader/ed25519-dalek-loader/tests/: ed25519.rs
loader/sha2/: Cargo.toml
loader/sha2-loader/: Cargo.toml
loader/sha2-loader/src/: lib.rs
loader/sha2/src/: lib.rs
loader/src/: args.rs  asm.S  asm.rs  bootconfig.rs  consts.rs  debug.rs  env.rs  fonts.rs  generate_fonts.py  lib.rs  main.rs  minielf.rs  murmur3.rs  phase1.rs  phase2.rs  platform.rs  secboot.rs  swap.rs  test.rs
loader/src/fonts/: bold.rs  emoji.rs  hanzi.rs  ja.rs  kr.rs  mono.rs  regular.rs  small.rs  tall.rs  zh.rs
loader/src/platform/: atsama5d27.rs  bao1x.rs  cramium.rs  precursor.rs
loader/utralib/: .gitignore  Cargo.toml
locales/: Cargo.toml  README.md  build.rs
locales/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
svd2repl/: Cargo.toml
svd2repl/src/: generate.rs  lib.rs  main.rs
svd2utra/: Cargo.toml  README.md  example.rs
svd2utra/examples/: soc.svd
svd2utra/src/: generate.rs  lib.rs  main.rs
tests/: Cargo.toml
tools/: Cargo.toml  README.md  README_UPDATE.md  app_server.py  backalyzer.py  backup.py  backupci.py  bcrypt.py  ct_analyze.py  cycle.ps1  encrypt-bitstream.py  factory_reset.ps1  factory_reset.sh  i18n_helper.py  kbd_layout.py  pddbci-btest.py  pddbci.py  pddbcommon.py  pddbdbg.py  pddbdbg_v1.py  perf_analyze.py  pngextract.py  restore.py  rfc8452.py  sign_image.py  trng_b64.py  trng_test.py  update_ci.ps1  update_ci.sh  update_release.ps1  upload_audiotest.sh  usb_update.py  v2p.txt
tools/legacy/: README_UPDATE.md  factory_reset.sh  update_ci.ps1  usb_update.py  usb_update_xous_0.8.py
tools/perflib/: Cargo.toml
tools/src/: elf.rs  git_remote_version.rs  lib.rs  sign_image.rs  swap_writer.rs  utils.rs  xous_arguments.rs
tools/updater/: README.md  pyproject.toml  setup.py
tools/wycheproof-import/: Cargo.toml  README.md
utralib/: Cargo.toml  README.md  build.rs
utralib/artybio/: bio.svd  soc.svd
utralib/artyvexii/: soc.svd
utralib/atsama5d/: ATSAMA5D27.svd
utralib/bao1x/: .gitignore  bao1x_peri.svd  daric.svd  soc.svd
utralib/cramium/: core.svd  daric.svd  soc.svd
utralib/precursor/: soc-6156e49.svd  soc-70190e2.svd  soc-7447604.svd  soc-a0912d6.svd  soc-b414f2b.svd  soc-c809403.svd  soc-dvt.svd  soc-perf.svd  soc-pvt.svd
utralib/renode/: renode.svd
utralib/src/: generated.rs  lib.rs
xous-ipc/: Cargo.toml
xous-ipc/src/: buffer.rs  lib.rs  string.rs
xous-rs/: Cargo.toml  assemble.ps1  assemble.sh  build.rs
xous-rs/src/: asm.S  buffer.rs  carton.rs  definitions.rs  ipc.rs  lib.rs  locale.rs  names.rs  pagebuffer.rs  process.rs  services.rs  string.rs  stringbuffer.rs  syscall.rs
xtask/: Cargo.toml  build.rs
xtask/src/: app_manifest.rs  builder.rs  generate_locales.rs  main.rs  utils.rs  verifier.rs  versioning.rs
(+1891 files in other folders)
