[package]
name = "baremetal"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Baremetal target"

[dependencies]
xous = "0.9.66"
utralib = { version = "0.1.25", optional = true, default-features = false }
cramium-hal = { path = "../libs/cramium-hal", optional = true, default-features = false }
cramium-api = { path = "../libs/cramium-api", optional = true, default-features = false }
vexriscv = { version = "0.5.6", package = "xous-riscv" }
riscv = { version = "0.14.0", features = ["critical-section-single-hart"] }
linked_list_allocator = { version = "0.10.5", optional = true }
xous-bio-bdma = { path = "../libs/xous-bio-bdma", optional = true, default-features = false }
critical-section = "1.2.0"
ux-api = { path = "../libs/ux-api", optional = true, default-features = false }
simple-fatfs = { git = "https://github.com/betrusted-io/simple-fatfs.git", branch = "baosec", optional = true, default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false }
digest = { version = "0.10.7", optional = true }
ed25519-dalek = { version = "=2.1.0", optional = true, default-features = false, features = [
    "rand_core",
    "digest",
] }

[features]
artybio = [
    "utralib/artybio",
    "linked_list_allocator",
    "xous-bio-bdma/artybio",
    "xous-bio-bdma/baremetal",
    "nto-bio",
]
artyvexii = ["utralib/artyvexii", "linked_list_allocator"]

# Baochip feature tree below
v0p9 = [] # selects RAM timings for VDD core = 0.9V
cramium-soc = [
    "utralib/cramium-soc",
    "linked_list_allocator",
    "cramium-hal/loader-baosec",
    # "cramium-hal/debug-print-usb",
    "cramium-api",
    "v0p9",
]
# activates BIO test suite
nto-bio = [
    "xous-bio-bdma/bio-mul",
    "xous-bio-bdma/baremetal",
    "xous-bio-bdma/cramium-soc",
    "xous-bio-bdma/tests",
]
# selects features for EVB target (defaults to baosec)
nto-evb = []
nto-gfx = ["ux-api/loader-baosec"]
nto-usb = [
    "nto-gfx",
    "simple-fatfs",
    "sha2",
    "digest",
    "ed25519-dalek",
    "cramium-hal/debug-print-usb",
    "cramium-hal/verbose-debug",
]
nto-buttons = []

verilator-only = []
default = ["nto-buttons"]
