[package]
name = "loader"
version = "0.1.0"
authors = [
    "Sean Cross <sean@xobs.io>",
    "Foundation Devices, Inc. <hello@foundationdevices.com>",
]
edition = "2018"
description = "Initial kernel loader for Xous"

[dependencies]
xous = "0.9.66"
ed25519-dalek-loader = { path = "ed25519-dalek-loader", default-features = false, optional = true }
curve25519-dalek-loader = { path = "curve25519-dalek-loader", default-features = false, features = [
    "u32e_backend",
], optional = true }
utralib = { version = "0.1.25", optional = true, default-features = false }
armv7 = { git = "https://github.com/Foundation-Devices/armv7.git", branch = "update", optional = true }
atsama5d27 = { git = "https://github.com/Foundation-Devices/atsama5d27.git", branch = "master", optional = true }
sha2-loader = { path = "./sha2-loader", default-features = false, optional = true }
cramium-hal = { path = "../libs/cramium-hal", optional = true, default-features = false }
cramium-api = { path = "../libs/cramium-api", optional = true, default-features = false }
ux-api = { path = "../libs/ux-api", optional = true, default-features = false }
xous-pl230 = { path = "../libs/xous-pl230", optional = true, features = [
    "tests",
    "pio",
    "cramium-soc",
    "baremetal",
    # "dma-mainram",  # PL-230 option - this fails on MPW
] }
# xous-pio = { path = "../libs/xous-pio", optional = true, features = [
#     "tests",
#     "cramium-soc",
#     "baremetal",
# ] }
aes-gcm-siv = { version = "0.11.1", default-features = false, features = [
    "aes",
], optional = true }
crc = { version = "1.8.1", default-features = false }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
pio-proc = { version = "0.2.2", optional = true }
pio = { version = "0.2.1", optional = true }
riscv = { version = "0.5.6", package = "xous-riscv" }
libm = { version = "0.2.8", optional = true }
nalgebra = { version = "0.33", default-features = false, features = [
    "libm",
], optional = true }
simple-fatfs = { git = "https://github.com/betrusted-io/simple-fatfs.git", branch = "baosec", optional = true, default-features = false }
linked_list_allocator = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.8", optional = true, default-features = false }
digest = { version = "0.10.7", optional = true }

[dependencies.ed25519-dalek]
version = "=2.1.0"
optional = true
default-features = false
features = ["rand_core", "digest"]

[dependencies.com_rs]
git = "https://github.com/betrusted-io/com_rs"
branch = "main"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
precursor = [
    "utralib/precursor",
    "ed25519-dalek-loader/precursor",
    "curve25519-dalek-loader/precursor",
    "resume",
    "secboot",
    "sha2-loader",
]
renode = [
    "utralib/renode",
    "ed25519-dalek-loader/renode",
    "curve25519-dalek-loader/renode",
    "secboot",
    "sha2-loader",
]
cramium-soc = [
    "utralib/cramium-soc",
    "debug-print",
    "cramium-hal",
    "cramium-api",
    "rand_chacha",
    "sram-margin",
    # "boot-delay",
]
board-baosec = [
    "cramium-hal/loader-baosec",
    "updates",
    "usb",
    "simple-fatfs",
    "linked_list_allocator",
    "ed25519-dalek",
    "sha2",
    "digest",
    "ux-api/loader-baosec",
]
board-baosor = ["cramium-hal/loader-baosor"]
board-dabao = ["cramium-hal/loader-dabao"]
cramium-fpga = ["utralib/cramium-fpga", "debug-print"]
atsama5d27 = ["utralib/atsama5d27", "armv7", "dep:atsama5d27"]

# precursor flags
platform-tests = []
renode-bypass = []
secboot = []
#default = ["debug-print"]

# swap flag
swap = ["aes-gcm-siv"]

# cramium target flags
board-bringup = []
sh1107-bringup = []                                            # used to discover FB parameters
sram-margin = []
boot-delay = []
simulation-only = []
verilator-only = []
quantum-timer-test = ["pio", "pio-proc"]
spim-test = []
irq-test = []
usb-test = []
trng-test = []
dump-trng = []
fast-fclk = []
clock-tests = []
reset-debug = []
cam-test = ["nalgebra", "libm", "cramium-hal/debug-print-usb"]
usb = []
qr = ["nalgebra", "libm"]
updates = []
cramium-mpw = ["cramium-hal/mpw"]
userspace-swap-debug = []                                      # sets up app UART mapping.

# general flags
debug-print = []
earlyprintk = []
resume = []      # suspend/resume pathway code

default = []
